Replace PUT /:key with /append/:key
